--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @message do |f| %>
+<%= form_for @message, remote: true do |f| %>
   <%= f.label :to %>
   <%= f.text_field :to, value: @contact.phone_number %>
   <%= f.label :from %>
